# CPVector-CMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CTest.yml  Windows_CTest.yml
examples/: CMakeLists.txt
examples/1_BuildTest/: CMakeLists.txt  main.cpp
examples/2_AppendingData/: CMakeLists.txt  main.cpp
examples/3_MemoryLeakCheck/: CMakeLists.txt  main.cpp
examples/4_SortingData/: CMakeLists.txt  main.cpp
examples/5_SortingArray/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CPVector.h  CPVector_BuildSettings.h  CPVector_Exceptions.h  CPVector_Move.h  CPVector_Template.h  CPVector_UserSetup.h
src/Sorting/: CMakeLists.txt  CPVector_Sorting.h  CPVector_SortingArray.h
tests/: CMakeLists.txt
tests/BasicFunctionality/: BasicFunctionalityTesting.cc  CMakeLists.txt  ConstructorTesting.cc  DynamicAllocationTesting.cc
tests/Constructors/: CMakeLists.txt  ConstructorTesting.cc
tests/DynamicAllocation/: CMakeLists.txt  DynamicAllocationTesting.cc
tests/Exceptions/: CMakeLists.txt  ExceptionTesting.cc
tests/Operators/: CMakeLists.txt  OperatorTesting.cc
tests/Sorting/: CMakeLists.txt  SortingTesting.cc
